--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -2,11 +2,12 @@
 
 .header {
   // font-family: 'Pacifico', cursive; // Apply font to entire header
+  
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 15px 50px;
-  height: 130px;
+  height: 110px;
   position: fixed;
   top: 0;
   left: 0;
@@ -15,10 +16,13 @@
   width: 100%;
   transition: background-color 0.3s ease;
   // background-color: rgba(0, 0, 0, 0.2); // Default transparent for / and /login
-  background-color: rgb(243, 235, 235); // Default transparent for / and /login
-  &.scrolled {
-    background-color: black; // Solid black when scrolled
-  }
+  background-color: transparent; // Default transparent for / and /login
+  // background-color: rgb(243, 235, 235); // Default transparent for / and /login
+  // &.scrolled {
+  background-color: #f1f1f1; // Default transparent for / and /login
+  // &.scrolled {
+  //    background-color: transparent;
+  // }
 
   &__logo {
     cursor: pointer;
@@ -28,8 +32,8 @@
     align-items: center;
     justify-content: center;
     img {
-      width: 80px;
-      height: 80px;
+      width: 100px;
+      height: 70px;
     }
   }
 
@@ -56,11 +60,14 @@
         font-size: 24px;
 
         li {
-          color: black;
+          z-index: 1;
+          color: #484848;
           cursor: pointer;
           transition: color 0.3s ease;
-          font-size: 26px;
+          font-size: 28px;
           // font-family: 'Pacifico', cursive;
+          position: relative;
+          font-weight: bold;
 
           &:hover {
             color: #e0e0e0;
@@ -80,7 +87,7 @@
         align-items: center;
 
         li {
-          color:black;
+          color: #484848;
           cursor: pointer;
           position: relative;
           transition: color 0.3s ease;
@@ -101,7 +108,7 @@
   }
 
   &__dropdown-menu {
-    background-color: black;
+    background-color: #484848;
     border-radius: 8px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     padding: 8px 0;
@@ -135,7 +142,7 @@
     top: -8px;
     right: -12px;
     background-color: #ff4d4f;
-    color: black;
+    color: #484848;
     border-radius: 50%;
     padding: 2px 6px;
     font-size: 12px;
