--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -2,7 +2,7 @@
 
 .header {
   // font-family: 'Pacifico', cursive; // Apply font to entire header
-  
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -153,5 +153,76 @@
     display: flex;
     align-items: center;
     justify-content: center;
+  }
+}
+.custom-dropdown-menu .ant-dropdown-menu {
+  background: rgba(10, 10, 10, 0.85);
+  border: none;
+  padding: 0px;
+  width: 200px;
+  margin-top: 5px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+  border-radius: 1px;
+}
+
+.custom-dropdown-menu .ant-dropdown-menu-item {
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  text-align: center;
+  padding: 14px 20;
+  border-bottom: 1px solid #ffffff;
+  transition: background 0.3s;
+  cursor: pointer;
+}
+
+.custom-dropdown-menu .ant-dropdown-menu-item:last-child {
+  border-bottom: none;
+}
+
+.custom-dropdown-menu .ant-dropdown-menu-item:hover {
+  background: rgba(255, 255, 255, 0.1);
+}
+
+.custom-dropdown-menu .ant-dropdown-menu-item {
+  background: rgba(135, 135, 135, 0.1);
+  color: #ffffff;
+}
+
+.search-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+  padding: 5px 10px;
+  border-radius: 12px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+
+  .search-input {
+    border: none;
+    outline: none;
+    font-size: 14px;
+    padding: 5px;
+    width: 120px;
+    background: transparent;
+  }
+
+  .search-button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    color: #333;
+    width: 30px;
+    height: 30px;
+
+    &:hover {
+      color: #000;
+    }
+
+    .anticon {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 16px;
+    }
   }
 }
