--- a/src/components/shopList/index.scss
+++ b/src/components/shopList/index.scss
@@ -49,3 +49,18 @@
   padding: 6px 8px;
   color: #999;
 }
+
+.empty-search {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 60vh;
+  text-align: center;
+
+  img {
+    width: 180px;
+    height: auto;
+    margin-bottom: 30px;
+  }
+}
