--- a/src/page/loginPage/index.scss
+++ b/src/page/loginPage/index.scss
@@ -1,5 +1,4 @@
 .login-form {
-  
   max-width: 400px;
   padding: 20px;
   background-color: rgba(0, 0, 0, 0.5);
@@ -7,7 +6,6 @@
   top: 50%;
   left: 50%;
   margin-bottom: 10px;
-  
 
   .ant-form-item-label > label {
     color: white;
@@ -23,6 +21,7 @@
     color: white;
     padding: 10px 0;
     font-size: 16px;
+    padding-left: 6px;
 
     &::placeholder {
       color: rgba(255, 255, 255, 0.7);
@@ -39,7 +38,7 @@
   }
 
   .login-btn {
-    background-color: #1d1a1a;
+    background-color: #000000;
     border-color: #000000;
     height: 45px;
     font-size: 16px;
@@ -49,10 +48,10 @@
     border-radius: 10px;
     cursor: pointer;
 
-    &:hover{
-      background-color: #000000;
-      border-color: #f5f5f5;
-      color: white;
+    &:hover {
+      &:hover {
+        background-color: #272626 !important;
+      }
     }
   }
 
@@ -68,24 +67,24 @@
     justify-content: center;
     border-radius: 10px;
     cursor: pointer;
-    transition: background-color 0.3s, color 0.3s;
+    transition:
+      background-color 0.3s,
+      color 0.3s;
     width: 100%;
     &:hover {
-      background-color: #f5f5f5;
+      background-color: #f5f5f5 !important;
       color: black;
     }
-
     img {
       margin-right: 10px;
     }
-
   }
   input:-internal-autofill-selected {
     appearance: menulist-button;
     background-image: none !important;
     background-color: light-dark(rgb(27, 87, 192), rgba(247, 247, 247, 0.4)) !important;
     color: fieldtext !important;
-}
+  }
   .signup-link {
     margin-top: 10px;
     text-align: center;
@@ -98,7 +97,6 @@
     }
   }
   .forgot-link {
-   
     text-align: center;
     color: white;
     font-size: 14px;
@@ -112,16 +110,39 @@
   .or-divider {
     text-align: center;
     margin: 15px 0; // Slightly increased margin
-    color:white; // Changed color to white for better visibility
+    color: white; // Changed color to white for better visibility
     font-size: 14px; // Added font size
   }
-  .ant-input-suffix{
+  .ant-input-suffix {
     font-size: 16px;
-    .anticon svg{
+    .anticon svg {
       color: white;
     }
   }
 
- 
+  .ant-form-item-has-error .ant-input,
+  .ant-form-item-has-error .ant-input-password {
+    background-color: #7c7b7b !important;
+    box-shadow: none !important;
+    color: #000 !important;
+  }
 
+  // Đảm bảo không bị chồng lớp
+  .ant-input-password {
+    display: flex;
+    align-items: center;
+    border-radius: 4px;
+    overflow: hidden;
+  }
+
+  // Optional: điều chỉnh placeholder
+  .ant-input::placeholder {
+    color: #e0e0e0 !important;
+  }
+
+  // Giữ text lỗi màu đỏ
+  .ant-form-item-explain-error {
+    color: #f44336 !important;
+    font-size: 13px;
+  }
 }
