--- a/src/page/registerPage/index.scss
+++ b/src/page/registerPage/index.scss
@@ -81,18 +81,8 @@
         background-image: none !important;
         color: fieldtext !important;
     }
-    .signup-link {
+    .signin-link {
         margin-top: 10px;
-        text-align: center;
-        color: white;
-        font-size: 14px;
-
-        a {
-            color: #ff4081;
-            font-weight: bold;
-        }
-    }
-    .forgot-link {
         text-align: center;
         color: white;
         font-size: 14px;
