--- a/src/components/homeList/index.scss
+++ b/src/components/homeList/index.scss
@@ -15,7 +15,7 @@
     overflow: hidden;
     white-space: nowrap;
     width: 100%;
-    margin: 60px 0; // Có thể giữ lại hoặc điều chỉnh khoảng cách
+    margin: 90px 0; // Có thể giữ lại hoặc điều chỉnh khoảng cách
 
     .text-track {
         display: inline-block;
@@ -55,6 +55,7 @@
     .category-item {
         flex: 1;
         text-align: center;
+        cursor: pointer;
 
         img {
             width: 100%;
