--- a/src/components/shopList/index.scss
+++ b/src/components/shopList/index.scss
@@ -64,3 +64,20 @@
     margin-bottom: 30px;
   }
 }
+
+.shop-list-wrapper {
+  position: relative;
+}
+.loading-fullscreen {
+  position: fixed;
+  z-index: 9999;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(255, 255, 255, 0.75);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  pointer-events: all;
+}
