--- a/src/page/cart/index.scss
+++ b/src/page/cart/index.scss
@@ -1,5 +1,4 @@
 .outlet-Cart {
-  padding-top: 0px;
   padding-bottom: 40px;
   display: flex;
   align-items: center;
@@ -14,94 +13,49 @@
   }
 }
 .return-update-cart {
-  padding-top: 10px;
+  padding-top: 30px;
   width: 1100px;
   display: flex;
-  justify-content: space-between;
-
+  margin-right: 100px;
   .ant-btn {
-    padding: 22px 28px;
-    align-items: center;
-    background: #000;
+    padding: 16px 30px;
     font-size: 16px;
+    background: #000;
     color: #fff;
-    cursor: pointer;
     border-radius: 1px;
     border: none;
-
     &:hover,
     &:focus {
-      background-color: #333 !important; // màu đỏ khi hover
+      background-color: #333 !important;
       color: #fff !important;
       border-color: #333 !important;
     }
   }
 }
-.coupon-Checkout {
-  padding-top: 50px;
+
+.cart-footer-action {
   width: 1100px;
   display: flex;
-  justify-content: space-between;
-}
-.ant-input-compact-first-item {
-  height: 34px;
-}
-.coupon-Input {
-  Button {
-    display: flex;
-    padding: 16px 48px;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    border-radius: 4px;
+  justify-content: flex-end;
+  margin-top: 32px;
+  .btn-checkout {
+    font-size: 18px;
+    padding: 16px 60px;
     background: #000;
-    font-size: 16px;
+    border: none;
+    border-radius: 4px;
+    color: #fff;
+    font-weight: 600;
+    transition: all 0.2s;
     &:hover,
     &:focus {
-      background-color: #333 !important; // màu đỏ khi hover
+      background: #333 !important;
       color: #fff !important;
       border-color: #333 !important;
     }
   }
 }
-.checkOut-Box {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 400px;
-  height: 200;
-  align-items: center;
-  border-radius: 4px;
-  border: 1.5px solid #000;
-  padding: 10px;
-  button {
-    font-size: 16px;
-    color: var(--Text, #fafafa);
-    display: inline-flex;
-    padding: 16px 48px;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    border-radius: 4px;
-    background: #000;
-    width: 260px;
-    cursor: pointer;
-    &:hover,
-    &:focus {
-      background-color: #333 !important; // màu đỏ khi hover
-      color: #fff !important;
-      border-color: #333 !important;
-    }
-  }
-}
-.modify-Checkout {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  border-bottom: 1px solid #ccc; /* Tạo đường thẳng phân cách */
-  padding-bottom: 10px;
-  padding-top: 10px;
-}
+
 .icon-Cart {
   width: 30px;
   height: 30px;
@@ -119,13 +73,11 @@
   justify-content: center;
   height: 60vh;
   text-align: center;
-
   img {
     width: 250px;
     height: auto;
     margin-bottom: 16px;
   }
-
   h2 {
     font-size: 24px;
     color: #333;
