--- a/src/page/detailPage/DetailPage.scss
+++ b/src/page/detailPage/DetailPage.scss
@@ -2,6 +2,7 @@
    max-width: 1200px;
    margin: 0 auto;
    padding: 20px;
+ 
 
    .product-display {
       display: flex;
@@ -37,7 +38,7 @@
                gap: 10px;
                overflow-x: auto;
                scroll-behavior: smooth;
-               padding: 30px 0px 40px 40px; 
+               padding: 30px 0px 40px 40px;
                &::-webkit-scrollbar {
                   display: none;
                }
@@ -276,6 +277,33 @@
                margin-bottom: 0;
             }
          }
+      }
+   }
+}
+
+.color-selection {
+   margin: 20px 0;
+
+   .color-options {
+      display: flex;
+      gap: 10px;
+      margin-top: 10px;
+   }
+
+   .color-circle {
+      width: 32px;
+      height: 32px;
+      border-radius: 50%;
+      cursor: pointer;
+      border: 2px solid transparent;
+      transition: border 0.2s;
+
+      &:hover {
+         opacity: 0.8;
+      }
+
+      &.active {
+         border: 2px solid #1890ff; // highlight màu đang chọn
       }
    }
 }
