--- a/src/components/dashboard/index.scss
+++ b/src/components/dashboard/index.scss
@@ -1,8 +1,7 @@
 /* ========== DASHBOARD LAYOUT ROOT ========== */
 .dashboard-layout {
-  min-height: 100vh;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   display: flex;
   background: #f5f5f5;
   overflow: hidden;
@@ -17,8 +16,8 @@
   top: 0;
   bottom: 0;
   width: 250px !important;
-  height: 100vh !important;
-  min-height: 100vh;
+  height: 120vh !important;
+  min-height: 120vh;
   z-index: 1000;
   display: flex;
   flex-direction: column;
@@ -127,8 +126,8 @@
   transition: margin-left 0.2s;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
-  height: 100vh;
+  min-height: 120vh;
+  height: 120vh;
   width: 100%;
   background: #f5f5f5;
 }
