update order stautus, manage review, checkout, refresh token

--- a/src/page/admin/product/index.scss
+++ b/src/page/admin/product/index.scss
@@ -8,7 +8,7 @@
     color: #20232a;
     font-family: "Inter", "Segoe UI", Arial, sans-serif;
     min-width: 340px;
-    max-width: 900px;
+     max-width: 1200px; // tăng từ 900px lên
 
     .product-detail-header {
         font-size: 22px;
